--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -1,25 +1,25 @@
 [core]
-api_key =
+api_key = COUCHPOTATO_API_KEY
 username =
 ssl_key =
 proxy_server =
 ssl_cert =
-data_dir =
+data_dir = /data
 use_proxy = 0
 permission_file = 0644
 proxy_password =
 dereferer = http://www.dereferer.org/?
 permission_folder = 0755
-dark_theme = False
+dark_theme = 1
 development = 0
 proxy_username =
 ipv6 = 0
 debug = 0
-launch_browser = True
+launch_browser = 0
 password =
-port = 5050
+port = COUCHPOTATO_PORT
 url_base =
-show_wizard = 1
+show_wizard = 0
 
 [download_providers]
 
@@ -30,19 +30,19 @@ git_command = git
 automatic = True
 
 [automation]
-rating = 7.0
+rating = 8
 votes = 1000
 hour = 12
 required_genres =
-year = 2011
+year =
 ignored_genres =
 
 [manage]
 startup_scan = True
 library_refresh_interval = 0
 cleanup = True
-enabled = False
-library =
+enabled = 1
+library = /media/Movies
 
 [renamer]
 file_name = <thename><cd>.<ext>
@@ -51,10 +51,10 @@ default_file_action = move
 ntfs_permission = False
 check_space = True
 nfo_name = <filename>.orig.<ext>
-from =
+from = /media/.tmp/couchpotato
 foldersep =
-to =
-cleanup = False
+to = /media/Movies
+cleanup = 1
 unrar_modify_date = False
 move_leftover = False
 rename_nfo = True
@@ -63,8 +63,8 @@ run_every = 1
 file_action = link
 replace_doubles = True
 unrar_path =
-enabled = False
-unrar = False
+enabled = 1
+unrar = 1
 separator =
 force_every = 2
 
@@ -79,9 +79,9 @@ enabled = False
 name = <filename>-trailer
 
 [blackhole]
-directory = /home/couchpotato
+directory = /data/blackhole
 manual = 0
-enabled = True
+enabled = 0
 create_subdir = 0
 use_for = both
 
@@ -168,15 +168,15 @@ remove_complete = False
 password =
 
 [sabnzbd]
-category =
+category = couchpotato
 delete_failed = True
 manual = False
-enabled = 0
+enabled = 1
 priority = 0
 ssl = 0
-host = localhost:8080
+host = SABNZBD_HOST:SABNZBD_PORT
 remove_complete = False
-api_key =
+api_key = SABNZBD_API_KEY
 
 [synology]
 username =
@@ -193,11 +193,11 @@ stalled_as_failed = True
 delete_failed = True
 rpc_url = transmission
 manual = 0
-enabled = 0
+enabled = 1
 paused = False
-host = http://localhost:9091
+host = http://TRANSMISSION_HOST:TRANSMISSION_PORT
 delete_files = True
-directory =
+directory = /media/.tmp/couchpotato
 remove_complete = True
 password =
 
@@ -258,13 +258,13 @@ enabled = 0
 on_snatch = 0
 
 [plex]
-username =
+username = PLEX_USERNAME
 on_snatch = 0
-auth_token =
+auth_token = PLEX_AUTH_TOKEN
 clients =
-enabled = 0
-media_server = localhost
-password =
+enabled = 1
+media_server = PLEX_HOST:PLEX_PORT
+password = PLEX_PASSWORD
 
 [prowl]
 priority = 0
@@ -382,12 +382,12 @@ enabled =
 extra_score = 0
 
 [newznab]
-use = 0,0,0,0,0
+use = 0,1,0,0,0
 extra_score = 0,0,0,0,0
 enabled = True
 host = api.nzb.su,api.dognzb.cr,nzbs.org,https://api.nzbgeek.info,https://www.nzbfinder.ws
 custom_tag = ,,,,
-api_key = ,,,,
+api_key = ,NZBGEEK_API_KEY,,,
 
 [nzbclub]
 enabled =
@@ -530,7 +530,7 @@ seed_ratio = 1
 [thepiratebay]
 seed_time = 40
 domain =
-enabled = False
+enabled = 1
 seed_ratio = 1
 extra_score = 0
 
@@ -595,11 +595,11 @@ extra_score = 0
 [searcher]
 preferred_method = both
 required_words =
-ignored_words = german, dutch, french, truefrench, danish, swedish, spanish, italian, korean, dubbed, swesub, korsub, dksubs, vain, HC
-preferred_words =
+ignored_words = german, dutch, danish, swedish, spanish, italian, korean, dubbed, swesub, korsub, dksubs, vain, HC, CAM
+preferred_words = BluRay, DTS-HD, DTS, Retail, x264, MULTI, DTSHD, DTSHD-MA
 
 [nzb]
-retention = 1500
+retention = 2031
 
 [torrent]
 minimum_seeders = 1
