Fix for nzbToMedia

--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -46,7 +46,7 @@ library = /media/Movies
 
 [renamer]
 file_name = <thename><cd>.<ext>
-next_on_failed = True
+next_on_failed = False
 default_file_action = move
 ntfs_permission = False
 check_space = True
@@ -59,14 +59,14 @@ unrar_modify_date = False
 move_leftover = False
 rename_nfo = True
 folder_name = <namethe> (<year>)
-run_every = 1
+run_every = 0
 file_action = link
 replace_doubles = True
 unrar_path =
 enabled = 1
 unrar = 1
 separator =
-force_every = 2
+force_every = 0
 
 [subtitle]
 languages =
