--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -382,12 +382,12 @@ enabled =
 extra_score = 0
 
 [newznab]
-use = 0,1,0,0,0
+use = 0,0,0,1,0
 extra_score = 0,0,0,0,0
 enabled = True
 host = api.nzb.su,api.dognzb.cr,nzbs.org,https://api.nzbgeek.info,https://www.nzbfinder.ws
 custom_tag = ,,,,
-api_key = ,NZBGEEK_API_KEY,,,
+api_key = ,,,NZBGEEK_API_KEY,
 
 [nzbclub]
 enabled =
