--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -69,9 +69,9 @@ separator =
 force_every = 0
 
 [subtitle]
-languages =
+languages = en,fr
 force = False
-enabled = False
+enabled = True
 
 [trailer]
 quality = 720p
