--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -45,7 +45,7 @@ enabled = 1
 library = /media/Movies
 
 [renamer]
-file_name = <thename><cd>.<ext>
+file_name = <thename><cd> (<year>).<ext>
 next_on_failed = False
 default_file_action = move
 ntfs_permission = False
