--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -258,13 +258,13 @@ enabled = 0
 on_snatch = 0
 
 [plex]
-username = PLEX_USERNAME
+username =
 on_snatch = 0
-auth_token = PLEX_AUTH_TOKEN
+auth_token =
 clients =
 enabled = 1
 media_server = PLEX_HOST:PLEX_PORT
-password = PLEX_PASSWORD
+password =
 
 [prowl]
 priority = 0
