Enable imdb automation

--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -638,19 +638,19 @@ automation_list_plan = True
 automation_list_current = False
 
 [imdb]
-automation_charts_top250 = False
-chart_display_boxoffice = True
+automation_charts_top250 = True
+chart_display_boxoffice = False
 chart_display_top250 = False
-automation_enabled = False
-chart_display_rentals = True
+automation_enabled = True
+chart_display_rentals = False
 automation_urls_use =
 automation_urls =
 automation_providers_enabled = False
 automation_charts_rentals = True
 chart_display_theater = False
-automation_charts_theater = True
+automation_charts_theater = False
 chart_display_enabled = True
-automation_charts_boxoffice = True
+automation_charts_boxoffice = False
 
 [itunes]
 automation_enabled = False
