--- a/couchpotato.ini
+++ b/couchpotato.ini
@@ -193,7 +193,7 @@ stalled_as_failed = True
 delete_failed = True
 rpc_url = transmission
 manual = 0
-enabled = 1
+enabled = 0
 paused = False
 host = http://TRANSMISSION_HOST:TRANSMISSION_PORT
 delete_files = True
@@ -486,7 +486,7 @@ seed_ratio = 1
 domain =
 seed_time = 40
 extra_score = 0
-enabled = True
+enabled = False
 only_verified = False
 seed_ratio = 1
 
@@ -530,7 +530,7 @@ seed_ratio = 1
 [thepiratebay]
 seed_time = 40
 domain =
-enabled = 1
+enabled = 0
 seed_ratio = 1
 extra_score = 0
 
@@ -581,7 +581,7 @@ seed_ratio = 1
 verified_only = True
 extra_score = 0
 minimal_seeds = 1
-enabled = True
+enabled = False
 seed_time = 40
 seed_ratio = 1
 
