--- a/app/couchpotato.ini
+++ b/app/couchpotato.ini
@@ -6,10 +6,10 @@ proxy_server =
 ssl_cert =
 data_dir = /data
 use_proxy = 0
-permission_file = 0644
+permission_file = 0664
 proxy_password =
 dereferer = http://www.dereferer.org/?
-permission_folder = 0755
+permission_folder = 0775
 dark_theme = 1
 development = 0
 proxy_username =
@@ -17,9 +17,12 @@ ipv6 = 0
 debug = 0
 launch_browser = 0
 password =
-port = COUCHPOTATO_PORT
+port = 5050
 url_base =
 show_wizard = 0
+username_internal_meta = rw
+bookmarklet_host =
+api_key_internal_meta = ro
 
 [download_providers]
 
@@ -30,7 +33,7 @@ git_command = git
 automatic = True
 
 [automation]
-rating = 8
+rating = 7
 votes = 1000
 hour = 12
 required_genres =
@@ -67,6 +70,7 @@ enabled = 1
 unrar = 1
 separator =
 force_every = 0
+remove_lower_quality_copies = True
 
 [subtitle]
 languages = en,fr
@@ -84,6 +88,7 @@ manual = 0
 enabled = 0
 create_subdir = 0
 use_for = both
+magnet_file = 0
 
 [deluge]
 username =
@@ -152,6 +157,7 @@ host = http://localhost:8080/
 delete_files = True
 remove_complete = False
 password =
+label = couchpotato
 
 [rtorrent]
 username =
@@ -166,6 +172,9 @@ delete_files = True
 directory =
 remove_complete = False
 password =
+authentication = basic
+ssl_verify = 1
+ssl_ca_bundle =
 
 [sabnzbd]
 category = couchpotato
@@ -174,7 +183,7 @@ manual = False
 enabled = 1
 priority = 0
 ssl = 0
-host = SABNZBD_HOST:SABNZBD_PORT
+host = sabnzbd.service
 remove_complete = False
 api_key = SABNZBD_API_KEY
 
@@ -195,7 +204,7 @@ rpc_url = transmission
 manual = 0
 enabled = 0
 paused = False
-host = http://TRANSMISSION_HOST:TRANSMISSION_PORT
+host =
 delete_files = True
 directory = /media/.tmp/couchpotato
 remove_complete = True
@@ -263,7 +272,7 @@ on_snatch = 0
 auth_token =
 clients =
 enabled = 1
-media_server = PLEX_HOST:PLEX_PORT
+media_server = plex.service:32400
 password =
 
 [prowl]
@@ -398,6 +407,7 @@ username =
 api_key =
 enabled =
 extra_score = 20
+custom_tag =
 
 [torrent_providers]
 
@@ -533,6 +543,7 @@ domain =
 enabled = 0
 seed_ratio = 1
 extra_score = 0
+trusted_only = False
 
 [torrentbytes]
 username =
@@ -549,6 +560,7 @@ extra_score = 0
 enabled = False
 password =
 seed_ratio = 1
+cookiesetting =
 
 [torrentleech]
 username =
@@ -593,7 +605,7 @@ seed_ratio = 1
 extra_score = 0
 
 [searcher]
-preferred_method = both
+preferred_method = nzb
 required_words =
 ignored_words = german, dutch, danish, swedish, spanish, italian, korean, dubbed, swesub, korsub, dksubs, vain, HC, CAM
 preferred_words = BluRay, DTS-HD, DTS, Retail, x264, MULTI, DTSHD, DTSHD-MA
@@ -639,18 +651,18 @@ automation_list_current = False
 
 [imdb]
 automation_charts_top250 = True
-chart_display_boxoffice = False
-chart_display_top250 = False
-automation_enabled = True
+chart_display_boxoffice = 1
+chart_display_top250 = 1
+automation_enabled = 0
 chart_display_rentals = False
 automation_urls_use =
 automation_urls =
-automation_providers_enabled = False
+automation_providers_enabled = 1
 automation_charts_rentals = True
-chart_display_theater = False
-automation_charts_theater = False
+chart_display_theater = 1
+automation_charts_theater = 1
 chart_display_enabled = True
-automation_charts_boxoffice = False
+automation_charts_boxoffice = 1
 
 [itunes]
 automation_enabled = False
@@ -658,7 +670,7 @@ automation_urls_use = ,
 automation_urls = https://itunes.apple.com/rss/topmovies/limit=25/xml,
 
 [kinepolis]
-automation_enabled = False
+automation_enabled = 1
 
 [letterboxd]
 automation_enabled = False
@@ -666,7 +678,7 @@ automation_urls_use =
 automation_urls =
 
 [moviemeter]
-automation_enabled = False
+automation_enabled = 1
 
 [moviesio]
 automation_enabled = False
@@ -674,10 +686,10 @@ automation_urls_use =
 automation_urls =
 
 [popularmovies]
-automation_enabled = False
+automation_enabled = 1
 
 [themoviedb]
-api_key = 9b939aee0aaafc12a65bf448e4af9543
+api_key =
 
 [mediabrowser]
 meta_enabled = False
@@ -703,3 +715,36 @@ search_on_add = 1
 
 [suggestion]
 enabled = True
+
+[androidpn]
+broadcast = 1
+username =
+on_snatch = 0
+enabled = 0
+url =
+
+[homey]
+url =
+enabled = 0
+
+[telegrambot]
+bot_token =
+on_snatch = 0
+enabled = 0
+receiver_user_id =
+
+[magnetdl]
+seed_time = 40
+max_pages = 3
+enabled = False
+seed_ratio = 1
+extra_score = 0
+
+[morethantv]
+username =
+seed_time = 40
+extra_score = 0
+enabled = False
+scene_only = False
+password =
+seed_ratio = 1
