--- a/app/couchpotato.ini
+++ b/app/couchpotato.ini
@@ -269,7 +269,7 @@ on_snatch = 0
 [plex]
 username =
 on_snatch = 0
-auth_token =
+auth_token = PLEX_TOKEN
 clients =
 enabled = 1
 media_server = plex.service:32400
