Fix sabnbzd host

--- a/app/couchpotato.ini
+++ b/app/couchpotato.ini
@@ -183,7 +183,7 @@ manual = False
 enabled = 1
 priority = 0
 ssl = 0
-host = sabnzbd.service
+host = sabnzbd.service:8080
 remove_complete = False
 api_key = SABNZBD_API_KEY
 
