--- a/app/couchpotato.ini
+++ b/app/couchpotato.ini
@@ -272,7 +272,7 @@ on_snatch = 0
 auth_token = PLEX_TOKEN
 clients =
 enabled = 1
-media_server = plex.service:32400
+media_server = PLEX_HOST:32400
 password =
 
 [prowl]
